force-app/main/default/objects/SL_Convert__Object_Relationship__c/SL_Convert__Object_Relationship__c.object-meta.xml
<CustomObject>
    <label>Object Relationship</label>
    <nameField>
        <label>Object Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>