force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Copy_Notes__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Copy_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Notes</label>
    <type>Checkbox</type>
</CustomField>