force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Count_Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Count_Field_Mappings__c</fullName>
    <label># of Active Field Mappings</label>
    <summaryFilterItems>
        <field>SL_Convert__Field_Mapping__c.SL_Convert__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SL_Convert__Field_Mapping__c.SL_Convert__Object_Relationship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>