force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Custom_Mapping__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Custom_Mapping__c</fullName>
    <label>Custom Mapping</label>
    <referenceTo>SL_Convert__Custom_Mapping__c</referenceTo>
    <relationshipLabel>Object Relationships</relationshipLabel>
    <relationshipName>Object_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>