force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Order__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Order__c</fullName>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>