force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Parent_Object_Relationship__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Parent_Object_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Object Relationship</label>
    <referenceTo>SL_Convert__Object_Relationship__c</referenceTo>
    <relationshipLabel>Is a Parent Object for:</relationshipLabel>
    <relationshipName>Object_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>