force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Related_Record_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Related_Record_Parent_Id__c</fullName>
    <label>Related Record Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>