force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Target_Object_API__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Target_Object_API__c</fullName>
    <label>Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>