force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Target_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Target_Parent_Id__c</fullName>
    <formula>SL_Convert__Parent_Object_Relationship__r.SL_Convert__Target_Object_API__c + &apos;.&apos; + SL_Convert__Parent_Object_Relationship__r.SL_Convert__Target_Relationship_Id__c</formula>
    <label>Target Parent Id</label>
    <type>Text</type>
</CustomField>