force-app/main/default/objects/SL_Convert__Object_Relationship__c/fields/SL_Convert__Target_Relationship_Id__c.field-meta.xml
<CustomField>
    <fullName>SL_Convert__Target_Relationship_Id__c</fullName>
    <label>Target Relationship Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>