force-app/main/default/objects/SL_Convert__Object_Relationship__c/recordTypes/SL_Convert__Direct_Association.recordType-meta.xml
<RecordType>
    <fullName>SL_Convert__Direct_Association</fullName>
    <active>true</active>
    <label>Direct Association</label>
</RecordType>