force-app/main/default/objects/SL_Convert__Object_Relationship__c/recordTypes/SL_Convert__Related_List.recordType-meta.xml
<RecordType>
    <fullName>SL_Convert__Related_List</fullName>
    <active>true</active>
    <label>Related List</label>
</RecordType>