force-app/main/default/objects/SL_Convert__Object_Relationship__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>SL_Convert__Order__c</columns>
    <columns>SL_Convert__Count_Field_Mappings__c</columns>
    <columns>SL_Convert__Context_Object_API__c</columns>
    <columns>SL_Convert__Context_Relationship_Id__c</columns>
    <columns>SL_Convert__Copy_Attachments__c</columns>
    <columns>SL_Convert__Copy_Notes__c</columns>
    <columns>SL_Convert__Custom_Mapping__c</columns>
    <columns>SL_Convert__Parent_Object_Relationship__c</columns>
    <columns>SL_Convert__Related_Record_Parent_Id__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>